--- a/RhyllaryNãoOlhe/sansao.css
+++ b/RhyllaryNãoOlhe/sansao.css
@@ -1,8 +1,8 @@
 p {
-    color: rgb(94, 43, 117);
+    color: rgb(255, 0, 179);
 }
 h1 {
-    color: blueviolet;
+    color: rgb(255, 0, 179);
 }
 h3 {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -12,10 +12,13 @@ h3 {
     transition: all .2s ease-in-out;
     border-radius: 30px;
     border-style:groove;
-    border-color: blueviolet;
+    border-color: rgb(255, 0, 191);
     height: 400px;
     width: 400px;
 }
 #engual:hover{
     top:-4px;box-shadow:0 4px 3px #999;
+}
+body {
+    background-image: url("imagem/er.jpg");
 }
